# opengl-lab

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.c
Models/: br2.off  cube.off  down.sh  unitcube.off
include/: Angel.h  defs.h  shader_s.h  u_colors.h  u_trace.h
include/glad/: glad.h
src/: fshader.glsl  glad.c  lab12.cxx  main.cpp  main2.cxx  u_utils.cxx
src/Common/: InitShader.cpp  stb_impl.cxx
src/lab1/: delayance.cxx  lab12.cxx  old.cxx
src/lab2/: cube_parallel.off  fshader.glsl  lab2.3.cpp  main.cpp  vshader.glsl
src/lab2.1/: main.cpp
src/tetris/: main.cpp
